  thanks to Erdem - ahard
- patch #2561433 [structure] Display true number of rows in a view
  if it contains less than MaxExactCountViews,
  thanks to Virsacer - virsacer
+ [lang] Polish update, thanks to Fixer - fixeron
- bug #2568722 [designer] Compound key not shown 
- patch #2550323 [XHTML] in server_databases.php, thanks to Virsacer - virsacer

3.1.2.0 (2009-01-19)
- bug #1253252 [display] Can't NULL a column with relation defined 
- bug #2009500 [SQL] Small improvements in generated SQL (partial fix) 
- bug #1963184 [export] YAML export improvement,
 thanks to Bryce Thornton - brycethornton
+ [lang] Dutch update, thanks to Herman van Rink - helmo 
- patch #2407785 [cleanup] ereg*() deprecated in PHP 5.3,
  thanks to Alex Frase - atfrase
- bug #2417058 [properties] Edit fields: losing auto-increment setting 
- patch #2444082 [changelog] changelog.php linkifies one link wrong,
  thanks to Robert Xiao - nneonneo
- bug #2363653 [properties] Various problems with table structure 
- bug [display] BIT field contents disappear when edited 
+ [lang] Czech update, thanks to Ondřej Vadinský.
- bug #2461735 [operations] Table operations adds "row_format" 
- bug #2445213 [export] Commas for CSV Excel 2008 for Mac 
- bug #2397877 [core] ForceSSL and http auth_type 
- bug #2473127 [display] Deleting rows displays tbl structure, not contents
- patch #2478940 [core] PHP 5.2+ warning does not work, 
  thanks to Jürgen Wind - windkiel
- bug #2416418 [privileges] Escaping special characters

3.1.1.0 (2008-12-09)
- patch #2242765 [core] Navi panel server links wrong,
  thanks to Martin Stricker - martinstricker
- bug #2186823 [core] bad session.save_path not detected
- bug #2202709 [core] Re-login causes PMA to forget current table name 
- bug #2280904 [export] do not include view name in export
- rfe #1688975 [display] enable copying of auto increment by default
- bug #2355753 [core] do not bail out creating session on any PHP warning